# test

./: .gitattributes  .gitignore  main.py  pyproject.toml
.client/: document.txt
.github/workflows/: uv_lock.yml
